--- a/ems-backend/src/main/resources/application.properties
+++ b/ems-backend/src/main/resources/application.properties
@@ -1,9 +1,17 @@
+# Application name
 spring.application.name=ems-backend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ems
+# ========================
+# DATABASE CONFIGURATION
+# ========================
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=rootpassword
+spring.datasource.password=uppWaHULVxuCnrSlkklvnsPOvAIKPjSJ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ========================
+# JPA / Hibernate
+# ========================
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
